# LordaeronTextRPG

./: .gitattributes  .gitignore  CMakeLists.txt  Character.cpp  Enemy.cpp  Event.cpp  Event.h  Game.cpp  Game.h  Game_wrapped.cpp  Puzzle.cpp  main.py  makefile
gamefiles/txt/character/: save.txt
gamefiles/txt/puzzles/: 1.txt  2.txt  3.txt  4.txt  5.txt
include/lordaeron/core/: Game.h
include/lordaeron/creatures/: Character.h  Enemy.h
include/lordaeron/events/: Event.h  Puzzle.h
src/core/: Game.cpp  Game_wrapped.cpp  main.py
src/creatures/: Character.cpp  Enemy.cpp
src/events/: Event.cpp  Puzzle.cpp
